<resources>
    <string name="app_name">Password Vault</string>
    <string name="settings">Settings</string>
    <string name="open_widget">Open widget</string>
    <string name="user_profile_updated">User profile updated.</string>
    <string name="renew_password_msg">An email to renew your password was sent to you.</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="credential">Credential</string>
    <string name="no_internet">No internet connection.</string>
    <string name="note">Note</string>
    <string name="email_not_right">Your email seems to be not right</string>
    <string name="login_is_empty">What\'s your login?</string>
    <string name="whats_password">What\'s your password?</string>
    <string name="error_field_required">This field is required</string>
    <string name="whats_name">What\'s your name?</string>
    <string name="passwords_do_not_match">Passwords don\'t match</string>
    <string name="whats_hint">What\'s your hint?</string>
    <string name="password">Password</string>
    <string name="access_password">Access Password</string>
    <string name="retype_access_password">Retype Access Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="password_hint">Password hint</string>
    <string name="password_hint_fmt">Password hint: \'%s\'</string>
    <string name="new_access_password">New Access Password</string>
    <string name="domain">Domain</string>
    <string name="website">Website</string>
    <string name="website_not_right">This website seems to be not right</string>
    <string name="x_selected">%1$d selected</string>
    <string name="sign_in">Sign in </string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>

    <string name="keep_it_organized">Keep it organized.</string>
    <string name="keep_it_organized_msg">Password Vault helps you to keep all your passwords organized by categories. Also, you can set some passwords as favorites to make it is easy to find.</string>
    <string name="keep_it_synced">Keep it synced.</string>
    <string name="keep_it_synced_msg">Password Vault helps you to keep all your passwords synced. You can access your password vault from any android devices you owns. </string>
    <string name="keep_it_noted">Keep it noted.</string>
    <string name="keep_it_noted_msg">Password Vault also helps you to keep all your passwords, emails, credentials and notes in one place.</string>
    <string name="keep_it_safe">Keep it safe.</string>
    <string name="keep_it_safe_msg">Password Vault helps you to keep all your passwords safe. On the next screen you will be asked for a vault password. Every time you leave the vault, this password will be asked to grant access.</string>

    <string name="duplicate">Duplicate</string>
    <string name="unselect_all">Unselect all</string>
    <string name="select_all">Select all</string>
    <string name="renew_password">Renew Password</string>
    <string name="create_account">Create Account</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_hint">This hint is too short</string>
    <string name="loading">Loading...</string>
    <string name="signing_in">Signing in...</string>
    <string name="deleting_account">Deleting account...</string>
    <string name="update">Update</string>
    <string name="wanna_delete_account">Are you sure you want to delete your account? This action is irreversible.</string>
    <string name="wanna_logout">Are you sure you want to logout your account?</string>
    <string name="forgot_title">Did you forget the title?</string>
    <string name="new_account_link">No account yet? Create one</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="already_member_link">Already a member? Login</string>
    <string name="logout">Logout</string>
    <string name="unknow">Unknow</string>
    <string name="conn_failed">Connection failed.</string>
    <string name="name">Name</string>
    <string name="all_passwords">All passwords</string>
    <string name="email_registering">Entering your email information.</string>
    <string name="note_registering">Entering your note.</string>
    <string name="credential_registering">Entering your credential information.</string>
    <string name="title">Title</string>
    <string name="save">save</string>
    <string name="account">Account</string>
    <string name="vault">Vault</string>
    <string name="empty_trash">You haven\'t deleted any content yet. It\'s good, it seems your passwords really matter to you.</string>
    <string name="empty_list">You haven\'t added any content yet. Fill up your vault using the add button below.</string>
    <string name="empty_fav">You haven\'t set any content as favorite yet. Mark some items as favorite and come back later.</string>
    <string name="first_intro">It\'s good to see you here! At this time you need to provide the vault password. This password will be requested every time you access the vault.</string>
    <string name="lock_intro">Please, provide your password to access the vault. Don\'t forget the hint!</string>
    <string name="reset_intro">Need a change? Please, provide a new password to access the vault. Don\'t forget the hint!</string>
    <string name="vault_access">Vault Access</string>
    <string name="sub_title">Keep your passwords safe.</string>
    <string name="category">Category</string>
    <string name="delete">Delete</string>
    <string name="purchase_n_supported">Purchases is not supported :(</string>
    <string name="lock">Lock</string>
    <string name="exit">Exit</string>
    <string name="color_palette">Color Palette</string>
    <string name="shade">Shade</string>
    <string name="favorite">Favorite</string>
    <string name="favorites">Favorites</string>
    <string name="search_hint">Search by title</string>
    <string name="palette">Palette</string>
    <string name="deleted">Deleted successfully!</string>
    <string name="moved_to_trash">Moved to trash!</string>
    <string name="duplicated">Duplicated successfully!</string>
    <string name="restored">Restored successfully!</string>
    <string name="toggled_favorite">Toggled favorite!</string>
    <string name="undo">Undo</string>
    <string name="all">All</string>
    <string name="internal_error">Internal error. Please try again later.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="retry">Retry</string>
    <string name="creation">Creation:</string>
    <string name="last_update">Last update:</string>
    <string name="trash">Trash</string>
    <string name="saved">Saved! Do you have another one?</string>
    <string name="updated">Updated! Do you want to save a new one?</string>
    <string name="developer_subtitle">Android Developer</string>
    <string name="developer_brief">I\'m warmed of mobile technologies. Ideas maker, curious and nature lover.</string>
    <string name="layout_dynamics">Layout &amp; dynamics</string>
    <string name="swipe_to_delete">Swipe to delete items</string>
    <string name="change_items_color">Change items color</string>
    <string name="show_cards">Display vault content as cards</string>
    <string name="domain_icons">Show email domains icons</string>
    <string name="hide_passwords">Always hide passwords</string>
    <string name="ordination">Ordination</string>

    <string name="vault_password">Vault password</string>

    <string name="items_order">Items order</string>
    <string name="auto_lock_delay">Auto lock delay</string>
    <string name="display_as_subtitle">Display as items subtitle</string>
    <string name="reset_vault_password">Reset vault password</string>
    <string name="delete_account">Delete account</string>
    <string name="about">About</string>
    <string name="action_cancelled">Action cancelled.</string>
    <string name="feedback">Feedback from %s</string>
    <string name="signing_out">Signing out...</string>

    <string name="recent_first">The recent items will be the firsts</string>
    <string name="recent_last">The recent items will be the lasts</string>
    <string name="disable">Disable</string>
    <string name="def">Default</string>
    <string name="email_password">Email &amp; password</string>
    <string name="none">None</string>
</resources>
