<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/all_passwords" />
        <item
            android:id="@+id/favorite"
            android:icon="@drawable/ic_action_star"
            android:title="@string/favorites" />
        <item
            android:id="@+id/trash"
            android:icon="@drawable/ic_action_trash"
            android:title="@string/trash" />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
    </group>


    <item android:title="@string/vault">
        <menu>
            <item
                android:icon="@drawable/lock"
                android:id="@+id/lock"
                android:title="@string/lock" />

            <item
                android:icon="@drawable/exit"
                android:id="@+id/exit"
                android:title="@string/exit" />
        </menu>
    </item>

    <item android:title="@string/account">
        <menu>
            <item
                android:icon="@drawable/logout"
                android:id="@+id/logout"
                android:title="@string/logout" />
        </menu>
    </item>



</menu>
