<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        android:icon="@mipmap/ic_action_delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="100"
        android:title="@string/favorite"
        android:icon="@mipmap/ic_favorite"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_palette"
        android:orderInCategory="100"
        android:title="@string/palette"
        android:icon="@mipmap/ic_palette"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_open_widget"
        android:orderInCategory="101"
        android:icon="@mipmap/ic_launch"
        android:title="@string/settings"
        app:showAsAction="always" />
</menu>
