<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/match_match"
    android:background="@color/primary_dark"
    android:orientation="vertical">

    <ScrollView
        style="@style/match_wrap"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <LinearLayout
                android:id="@+id/email_login_form"
                style="@style/match_wrap"
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:orientation="vertical">

                <TextView
                    style="@style/label"
                    android:textSize="30sp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center"
                    android:text="@string/app_name" />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/name_label"
                    style="@style/text_input">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/name"
                        style="@style/edit"
                        android:hint="@string/name"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_label"
                    style="@style/text_input">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/email"
                        style="@style/edit"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout style="@style/text_input"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@android:color/white"
                    android:id="@+id/pass_label">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        style="@style/edit"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/submit"
                    style="@style/button"
                    android:text="@string/sign_in" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/link"
                        style="@style/link"
                        android:text="@string/new_account_link" />

                    <TextView
                        android:id="@+id/forgot"
                        style="@style/link"
                        android:text="@string/forgot_password" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/social_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/google"
                        style="@style/google_button"
                        android:drawableLeft="@mipmap/google"
                        android:text="@string/google" />


                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/facebook"
                        style="@style/facebook_button"
                        android:layout_marginTop="5dp"
                        android:drawableLeft="@mipmap/facebook"
                        android:text="@string/facebook" />

                </LinearLayout>
            </LinearLayout>


            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>
