<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_label"
        style="@style/text_input">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email"
            style="@style/edit"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_label"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/white"
        style="@style/text_input">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password"
            style="@style/edit"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/domain_label"
        style="@style/text_input">

        <AutoCompleteTextView
            android:id="@+id/domain"
            style="@style/edit"
            android:completionThreshold="1"
            android:hint="@string/domain"
            android:inputType="text"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>