<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_label"
        style="@style/text_input">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login"
            style="@style/edit"
            android:hint="@string/login"
            android:inputType="textPersonName"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_label"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/white"
        app:passwordToggleTintMode="src_atop"
        style="@style/text_input">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password"
            style="@style/edit"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_label"
        style="@style/text_input">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email"
            style="@style/edit"
            android:hint="@string/email"

            android:inputType="textEmailAddress"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/website_label"
            style="@style/text_input">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/website"
                style="@style/edit"
                android:paddingRight="40dp"
                android:hint="@string/website"
                android:inputType="text"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <com.vansuita.passwordvault.view.FavIconWebView
            android:id="@+id/website_favicon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="12dp"
            android:layout_gravity="right|bottom" />
    </FrameLayout>

</LinearLayout>