<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match_match">

    <ScrollView
        style="@style/match_match"
        android:background="@color/primary"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v4.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1" />

                <LinearLayout
                    style="@style/match_wrap"
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/screen_title"
                        style="@style/label"
                        android:text="@string/email_registering" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/title_label"
                            style="@style/text_input">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/title"
                                style="@style/edit"
                                android:hint="@string/title"
                                android:inputType="textShortMessage"
                                android:maxLines="1" />

                        </android.support.design.widget.TextInputLayout>


                        <FrameLayout
                            android:id="@+id/child_holder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>


                    <TextView
                        android:id="@+id/dates"
                        style="@style/link"
                        android:textColor="@color/secondary_text"
                        android:textSize="12sp"
                        android:paddingTop="10dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/save"
                        style="@style/button"
                        android:text="@string/save" />
                </LinearLayout>


                <android.support.v4.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</FrameLayout>